Maybe this'll fix the font cutting off problem

--- a/src/app.css
+++ b/src/app.css
@@ -176,6 +176,10 @@
     }
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 18px;
 }
